# quizcpp

./: .gitignore  README.md
constexpression/: CMakeLists.txt  main.cpp
cubic/: main.cpp
dynamic_array/: main.cpp
haff/: 1.txt  3.txt  Biblio.h  CMakeLists.txt  code.c  code.cpp  decode.c  decode.cpp  file1.c  file6.c  file7.c  file8.c  haffman.h  list.c  list.cpp  main.c  main.cpp  make_tree.cpp  make_tree.h  makefile  print.c  print.cpp  tree.c  tree.cpp  tree.h
hirsch_index/: CMakeLists.txt  hirsh.cpp  hirsh.h  hirsh_extra_space.cpp  main.cpp  test.cpp  test.h
interview2021/: main.cpp
leetcode/: task-scheduler.cpp  trimino.cpp
lenia_simulation/: example.cpp  main.cpp
lenia_simulation/angle/: main.cpp
lenia_simulation/lambda/: main.cpp
lenia_simulation/satellite/: CMakeLists.txt
linear_postman/: main.cpp
mexmat2019/: main.cpp
microsoft/balloon/: main.cpp
microsoft/potholes/: main.cpp
microsoft/task2/: main.cpp
prime5/: main.cpp
ray_tracer/: CMakeLists.txt  main.cpp  orig.cpp
sign/: CMakeLists.txt  main.cpp
size_t_test/: main.cpp
slow_sort/: compile.txt  in.txt  main.cpp  slow_gen.cpp
summ_two/: main.cpp
syntax_test/: main.cpp
tink_2021_07/1/: main.cpp
tink_2021_07/2/: main.cpp
tink_2021_07/3/: main.cpp
water_trap/: water_trap.cpp
ya/interview/: CMakeLists.txt
ya/interview/aa1/: CMakeLists.txt
ya/interview/aa1/compressList/: main.cpp
ya/interview/aa1/hotelGuests/: main.cpp
ya/interview/aa1/oneEditApart/: main.cpp
ya/interview/aa1/removeBrackets/: main.cpp
ya/interview/aa2/: CMakeLists.txt
ya/interview/aa2/robotStatistics/: main.cpp
ya/interview/leetcode/: CMakeLists.txt
ya/interview/leetcode/addTwoNumbers/: main.cpp
ya/interview/leetcode/mergeIntervals/: main.cpp
ya/interview/leetcode/numberOfIslands/: CMakeLists.txt  main.cpp
ya/interview/leetcode/validParentheses/: main.cpp
ya/interview/skype/: CMakeLists.txt
ya/interview/skype/20210210/: main.cpp
ya/interview/skype/20210211/: main.cpp
ya/interview/skype/20210215/: main.cpp  original.cpp
ya/interview/skype/BFS/: main.cpp
ya/interview/skype/LRU/: main.cpp
ya/interview/skype/LRU_standart/: main.cpp
ya/interview/skype/anagrams/: main.cpp
ya/interview/skype/exitOrFence/: main.cpp
ya/interview/skype/mergeKlists/: leetcode.cpp  main.cpp
ya/interview/skype/normalizePath/: main.cpp
ya/interview/skype/shared_pointer/: main.cpp
ya/interview/skype/urlify/: main.cpp
ya/shad_2021_05_29/D1/: main.cpp
ya/ya_diag/1/: 1.txt  main.cpp
ya_algo_2020_09/: CMakeLists.txt  Readme.md
ya_algo_2020_09/D2/: ans.txt  main.cpp
ya_algo_2020_09/E2/: main.cpp
ya_algo_2020_09/F/: main.py
ya_algo_2020_09/G/: G.sql
ya_algo_2020_09/H/: server.py
ya_algo_2020_09/backB/: main.cpp
ya_algo_2020_09/backC/: main.cpp
ya_algo_2020_09/others_solutions/: AlarmClocks.java  AlarmGood.java  Stones.java  algorithm.py  backend.py  ml.py
ya_algo_2020_09/task1/: main.cpp
ya_algo_2020_09/task2/: main.cpp
ya_algo_2020_09/task3/: main.cpp
ya_algo_2020_09/task4/: main.cpp
ya_algo_2020_09/task5/: main.cpp
ya_algo_2020_09/task6/: main.cpp
ya_algo_2020_09/task6_2/: main.cpp
ya_algo_2020_09/task6_2/testdata/: input.txt  input1.txt  input10.txt  input100k.txt  input100kx100k.txt  input100x100.txt  input10k.txt  input10kx10k.txt  input15x15.txt  input1dot.txt  input1dot2.txt  input1k.txt  input3.txt  input30.txt  input30x30.txt  input30x30p.txt  input500.txt  inputdots.txt  inputdots2.txt  inputdotslongdots.txt
ya_test_2024_02_07/: CMakeLists.txt
ya_test_2024_02_07/task1/: main.cpp
ya_test_2024_02_07/task2/: B.txt  main.cpp
ya_test_2024_02_07/task3/: C.txt  main.cpp
ya_test_2024_02_07/task4/: D.txt  main.cpp
ya_test_2024_02_07/task5/: E.txt  main.cpp
(+28 files in other folders)
